Bootstrap parity (#16)
* Reorganize structure to match bootstrapper. Add 1:many emails

* More updates for parity, add on delete cascade

* Update comments for Dan

* Remove a dangling file in the wrong directory

* Fix typo for the database. Also make it settable
