# pkg/pb/contacts.pb.validate.go
@@ -1,8 +1,8 @@
 // Code generated by protoc-gen-validate
-// source: github.com/infobloxopen/atlas-contacts-app/proto/contacts.proto
+// source: github.com/infobloxopen/atlas-contacts-app/pkg/pb/contacts.proto
 // DO NOT EDIT!!!
 
-package contacts
+package pb
 
 import (
 	"bytes"
@@ -49,12 +49,29 @@ func (m *Contact) Validate() error {
 
 	// no validation rules for LastName
 
-	if err := m._validateEmail(m.GetEmailAddress()); err != nil {
+	if err := m._validateEmail(m.GetPrimaryEmail()); err != nil {
 		return ContactValidationError{
-			Field:  "EmailAddress",
+			Field:  "PrimaryEmail",
 			Reason: "value must be a valid email address",
 			Cause:  err,
 		}
+	}
+
+	for idx, item := range m.GetEmails() {
+		_, _ = idx, item
+
+		if v, ok := interface{}(item).(interface {
+			Validate() error
+		}); ok {
+			if err := v.Validate(); err != nil {
+				return ContactValidationError{
+					Field:  fmt.Sprintf("Emails[%v]", idx),
+					Reason: "embedded message failed validation",
+					Cause:  err,
+				}
+			}
+		}
+
 	}
 
 	return nil
@@ -140,6 +157,107 @@ func (e ContactValidationError) Error() string {
 }
 
 var _ error = ContactValidationError{}
+
+// Validate checks the field values on Email with the rules defined in the
+// proto definition for this message. If any rules are violated, an error is returned.
+func (m *Email) Validate() error {
+	if m == nil {
+		return nil
+	}
+
+	// no validation rules for Id
+
+	if err := m._validateEmail(m.GetAddress()); err != nil {
+		return EmailValidationError{
+			Field:  "Address",
+			Reason: "value must be a valid email address",
+			Cause:  err,
+		}
+	}
+
+	return nil
+}
+
+func (m *Email) _validateHostname(host string) error {
+	s := strings.ToLower(strings.TrimSuffix(host, "."))
+
+	if len(host) > 253 {
+		return errors.New("hostname cannot exceed 253 characters")
+	}
+
+	for _, part := range strings.Split(s, ".") {
+		if l := len(part); l == 0 || l > 63 {
+			return errors.New("hostname part must be non-empty and cannot exceed 63 characters")
+		}
+
+		if part[0] == '-' {
+			return errors.New("hostname parts cannot begin with hyphens")
+		}
+
+		if part[len(part)-1] == '-' {
+			return errors.New("hostname parts cannot end with hyphens")
+		}
+
+		for _, r := range part {
+			if (r < 'a' || r > 'z') && (r < '0' || r > '9') && r != '-' {
+				return fmt.Errorf("hostname parts can only contain alphanumeric characters or hyphens, got %q", string(r))
+			}
+		}
+	}
+
+	return nil
+}
+
+func (m *Email) _validateEmail(addr string) error {
+	a, err := mail.ParseAddress(addr)
+	if err != nil {
+		return err
+	}
+	addr = a.Address
+
+	if len(addr) > 254 {
+		return errors.New("email addresses cannot exceed 254 characters")
+	}
+
+	parts := strings.SplitN(addr, "@", 2)
+
+	if len(parts[0]) > 64 {
+		return errors.New("email address local phrase cannot exceed 64 characters")
+	}
+
+	return m._validateHostname(parts[1])
+}
+
+// EmailValidationError is the validation error returned by Email.Validate if
+// the designated constraints aren't met.
+type EmailValidationError struct {
+	Field  string
+	Reason string
+	Cause  error
+	Key    bool
+}
+
+// Error satisfies the builtin error interface
+func (e EmailValidationError) Error() string {
+	cause := ""
+	if e.Cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.Cause)
+	}
+
+	key := ""
+	if e.Key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sEmail.%s: %s%s",
+		key,
+		e.Field,
+		e.Reason,
+		cause)
+}
+
+var _ error = EmailValidationError{}
 
 // Validate checks the field values on CreateContactRequest with the rules
 // defined in the proto definition for this message. If any rules are
